Implement v3 collection import endpoint
